  * postgresql-all: New meta package depending on all server packages in all
    supported versions. Intended to be used for installing test dependencies.
  * pg_upgradecluster: Properly upgrade databases with non-login role owners.
    (Closes: #614374, #838812)
  * pg_upgradecluster, pg_renamecluster: Update cluster_name.
  * Rebuild upgrades libreadline to 7 in unstable. (Closes: #845356)

  [ Martin Pitt ]
  * debian/supported-versions: Add Ubuntu 17.04.
  * t/TestLib.pm, check_clean(): Quiesce stderr of netstat, which shows a "Not
    all processes could be identified" warning in unprivileged containers.

 -- Christoph Berg <christoph.berg@credativ.de>  Thu, 13 Oct 2016 15:32:49 +0200

postgresql-common (177) unstable; urgency=medium

  [ Martin Pitt ]
  * Replace hardcoded Recommends: libreadline6 with a build-time detection of
    the current ABI.

  [ Christoph Berg ]
  * Team upload.
  * Mark 9.6 as stable for apt.postgresql.org.

 -- Christoph Berg <christoph.berg@credativ.de>  Wed, 28 Sep 2016 11:55:12 +0200

postgresql-common (176) unstable; urgency=medium

  * Team upload.
  * Bump default PostgreSQL server version to 9.6.
  * Use C.UTF-8 instead of C when the initial main cluster is created and no
    locale is configured explicitly as system default. (Closes: #790507)
  * Support "NN" major version numbers, next version will be PostgreSQL 10.
  * debian/postgresql-common.templates: Properly mark not-to-be-translated
    shell code-only chunk as such using flag:translate. Thanks to Rhonda for
    the pointer! (See: #820756, #832282)
  * testsuite: Run with umask 077 only by default.
  * t/025_logging.t: Fix tests when grep thinks syslog is a binary file.
  * t/031_errors_disk_full.t: Raise tmpfs size to account for larger cluster
    footprint observed on ppc64el.
  * t/032_ssl_key_permissions.t: Skip tests on 9.0 and earlier.
  * pg_createcluster, t/025_logging.t: Skip logging_collector for 8.2.