@@ -13,8 +13,8 @@ good idea to provide a default explicitly, with a final line where both
 user and group are set to 
 .BR * .
 
-If there is no default, the implicit default is to connect to the cluster whose
-postmaster is listening on port 5432 and to the database matching the user's
+If there is no default, the implicit default is to connect to the cluster
+listening on port 5432 and to the database matching the user's
 login name.
 
 .SH FORMAT
